style.css
body {
  background-color: #000000;
  color: #FFFFFF;
  font-family: sans-serif;
}

.homeimage {
  height: 50px;
  width: 100px;
  transition: box-shadow 1s;
  margin: 5px 10px 10px 5px;
}

.homeimage:hover {
  box-shadow: 0px 0px 5px rgb(204, 0, 255);
}

a {
  text-decoration: none;
}

.links {
  color: #0666ff;
}

.boxes {
  border-radius: 0px 0px 15px 15px;
  padding: 20px;
  border: 2px solid #808080;
  box-shadow: 2px 2px 5px rgb(204, 0, 255);
  margin-left: 210px;
}

.serif {
  font-family: 'Noto Serif', serif;
}

.sidebar {
  margin: 0;
  padding: 0;
  width: 200px;
  background-color: #f1f1f1;
  position: fixed;
  height: 100%;
  overflow: auto;
}

.sidebar a:not(.homeimagelink) {
  display: block;
  background-color: #CCC;
  color: #000;
  padding: 16px;
  padding: 10px 20px;
  padding-left: 10px;
  padding-right: 10px;
  border: 3px solid #eee;
}

.sidebar a:hover:not(.homeimagelink) {
  background-color: #555;
  color: white;
}

div.content {
  margin-left: 200px;
  padding: 1px 16px;
  height: 1000px;
}

@media screen and (max-width: 700px) {
  .sidebar {
    width: 100%;
    height: auto;
    position: relative;
  }
  .sidebar a {
    float: left;
  }
  div.boxes {
    margin-left: 0;
  }
}

@media screen and (max-width: 400px) {
  .sidebar a {
    text-align: center;
    float: none;
  }
}

